src/objects/Email_Digest_Log__c.object
<CustomObject>
    <description>Object for sending/tracking weekly RoundTable emails sent to customer portal users based on their specific RoundTable needs.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Email Digest Logs</relationshipLabel>
        <relationshipName>Email_Digest_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Body__c</fullName>
        <label>Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Address__c</fullName>
        <label>To Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Digest Log</label>
    <listViews>
        <fullName>AllIdeaCommentNotification</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contact__c</columns>
        <columns>Email_Subject__c</columns>
        <columns>Email_Body__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Subject__c</field>
            <operation>equals</operation>
            <value>Idea Comment Notification</value>
        </filters>
        <label>All Idea Comment Notification</label>
    </listViews>
    <listViews>
        <fullName>AllTriTechRoundTableWeeklyReport</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Contact__c</columns>
        <columns>Email_Subject__c</columns>
        <columns>Email_Body__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email_Subject__c</field>
            <operation>equals</operation>
            <value>TriTech RoundTable Weekly Report</value>
        </filters>
        <label>All TriTech RoundTable Weekly Report</label>
    </listViews>
    <listViews>
        <fullName>November25</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Type__c</columns>
        <columns>To_Address__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Email_Body__c</columns>
        <columns>Email_Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/25/2013 12:00 AM</value>
        </filters>
        <label>11-25-2013</label>
    </listViews>
    <nameField>
        <displayFormat>Digest-{0000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Digest Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>